compass/regressions/C++/Memory safety/Memory leak 3/test.cpp
void specify_checks()
{
  check_memory_leak();
}

void foo(int flag)
{
  int* x = new int;
  if(flag) delete x;
  //error
  
}